<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:layout_gravity="center_horizontal"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_tv"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_marginTop="150dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/prize_image"
        android:src="@drawable/prize" />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tv"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        />
    <TextView
        android:id="@+id/user_name"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_tv"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/correct_answers"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_tv"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            />
        <TextView
            android:id="@+id/total_questions"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_question"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_finish"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text"
        android:textColor="@android:color/primary_text_light"
        android:textStyle="bold"
        android:textSize="15sp"
        android:backgroundTint="@android:color/white"
        />

</LinearLayout>